--- a/index.html
+++ b/index.html
@@ -2,68 +2,20 @@
 <html>
 
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Picam Viewer</title>
-    <link rel="stylesheet" href="vendor/video-js.min.css">
-    <style type="text/css">
-        body {
-            background: black;
-            text-align: center;
-        }
-        
-        #player {
-            margin: 0 auto;
-        }
-    </style>
-</head>
-
-<body>
-    <video id="player" preload="auto" controls class="video-js vjs-default-skin"></video>
-
+    <link rel="stylesheet" type="text/css" href="vendor/video-js.min.css" />
+    <link rel="stylesheet" type="text/css" href="./app.css" />
     <script src="vendor/promise.min.js"></script>
     <script src="vendor/fetch.js"></script>
     <script src="vendor/video.min.js"></script>
     <script src="vendor/videojs-flash.min.js"></script>
     <script src="vendor/videojs-contrib-hls.min.js"></script>
+</head>
 
-    <script type="text/javascript">
-        fetch('config.json').then(function (response) {
-            return response.json();
-        }).then(function (config) {
-            var streamUrl = config.url;
-
-            // build absolute url
-            if (streamUrl.indexOf('http://') < 0 && streamUrl.indexOf('https://') < 0) {
-                if (streamUrl.indexOf('/') === 0) {
-                    streamUrl = location.pathname + streamUrl;
-                } else if (streamUrl.indexOf('/') === 1) {
-                    streamUrl = streamUrl.substr(1);
-                }
-
-                streamUrl = location.protocol 
-                    + '//' 
-                    + location.hostname 
-                    + (location.port ? ':' + location.port : '') 
-                    + '/' 
-                    + streamUrl;
-            }
-
-            var parameters = {
-                sources: [
-                    {
-                        src: streamUrl,
-                        type: 'application/x-mpegURL'
-                    }
-                ],
-                aspectRatio: "16:9",
-                fluid: true,
-                techOrder: ['html5', 'flash']
-            };
-
-            // Configure videojs
-            var player = videojs('player', parameters);
-            player.play();
-        });
-    </script>
+<body>
+    <video id="player" preload="auto" controls class="video-js vjs-default-skin"></video>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
